# Crap

./: CMakeLists.txt  CounterClass.cpp  CounterClass.h  Crap.h  CrapMain.cc  CrapPhoAnalysis.C  DiObjectPlotClass.cpp  DiObjectPlotClass.h  LICENSE  Makefile  PhoHistClass.cpp  PhoHistClass.h  README.md  UtilPieces.h  stupid.sh
LLAnalysis/: CrapLLAnalysis.C  CrapLLAnalysis.cc  CrapLLAnalysis.h
PhoAnalysis/: CrapPhoAnalysis.C  CrapPhoAnalysis.cc  CrapPhoAnalysis.h  CrapPhoMain.cc
PhoAnalysis/FileLists/: Run2012B-22Jan2013.xrootd.txt  Run2012C-22Jan2013.xrootd.txt  Run2012D-22Jan2013.xrootd.txt  testfile.xrootd
xrootdfilelists/: Run2012A-22Jan2013.xrootd.txt
